# sport-data-solution

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  arborescence.txt  docker-compose.yml  pyproject.toml  readme.md  requirements.py
airflow/: .env  Dockerfile  requirements.txt
airflow/dags/: bootstrap.py  dag_initialisation_postgres.py  dag_pipeline_avantages.py  dag_test_streaming_kafka_delta.py  daily_batch.py  global_sportdata_dag.py  hello_world.py  init_minio_structure.py  spark_etl_pipeline.py  streams.py
airflow/plugins/: minio_helper.py
airflow/scripts/: ajouter_tables_publication.py  bronze_controle_qualite.py  controle_qualite_activites.py  croiser_rh_sport_et_calculer_prime.py  ecriture_delta.py  etape_01_initialiser_minio.py  etape_01_uploader_inputs_minio.py  export_powerbi.py  (+19 more)
connecteurs/: connecteur_doc.md  sportdata_connector.json
dags/: download_s3_files_dag.py
dbt/: dbt_project.yml  packages.yml  profiles.yml
debezium/: connecteur_doc.md  sportdata_connector.json
docker/: docker-compose.override.airflow.yml  docker-compose.override.dbt.yml
monitoring/: prometheus.yml
old/: menu_sportdata_solution.bat
pgadmin/: pgadmin4.db
prometheus/: prometheus.yml
scripts/: etape_01_initialiser_minio.py  etape_02_spark_init_delta_table.py  etape_03_nettoyer_donnees_rh.py  etape_04_spark_bronze_streaming_activites.py  etape_05_simuler_activites_sportives.py  etape_06_calculer_primes_jbe.py  etape_07_publier_tables_postgres.py  init_env.py  minio_helper.py  ntfy_helper.py
spark/: Dockerfile  jmx_config.yaml  requirements_spark.txt
(+104 files in other folders)
