[tool.poetry]
name = "pipeline-avantages-sportifs"         # Nom du projet
version = "0.1.0"                             # Version initiale
description = "Pipeline Airflow pour le POC Avantages Sportifs"  # Description
package-mode = false  # Désactive l'installation du projet comme package


[tool.poetry.dependencies]
python = "^3.11"                              # Version Python compatible
pandas = "2.2.2"                              # Voir comments dans requirements
numpy = "1.26.4"
openpyxl = "3.1.2"
requests = "2.31.0"
python-dotenv = "1.0.1"
sqlalchemy = "2.0.29"
psycopg2-binary = "2.9.9"
duckdb = "0.10.1"
slack_sdk = "3.26.2"
geopy = "2.4.1"
cryptography = "42.0.4"
great_expectations = "0.18.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
 
